<resources>
    <string name="app_name">app</string>
    <string name="welcome_message">Hola, Michael</string>
    <string name="text_splash">Safe-Quim</string>
    <string name="text_name_app_login">S a f e - Q u i m</string>
    <string name="text_welcome">Bienvenido a Safe-Quim</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrate">Registrate</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="iniciar_sesion_google">Iniciar sesión con Google</string>
    <string name="olvidaste_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="no_tienes_cuenta">¿No tienes una cuenta? Registrate</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta? Iniciar sesión</string>
    <string name="registrarse">Registrar usuario</string>
    <string name="titulo_registro">REGISTRATE</string>
    <string name="nombre_usuario">Nombre completo</string>
    <string name="confirmar_contraseña">Confirmar contraseña</string>
    <string name="boton_registro">registrar</string>
    <string name="productos">Productos</string>
    <string name="carrito">Carrito</string>
    <string name="mis_compras">Mis compras</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="configuracion">Configuración</string>
    <string name="usuarios">Usuarios</string>
    <string name="gestion_user">Gestión usuarios</string>
    <string name="gestion_admin">Gestión admin</string>
    <string name="gestion_productos">Gestión productos</string>
    <string name="inicio">Inicio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hola como</string>
    <string name="hello_blank_fragment_perfil">Hola como estas Michael Stiff</string>
    <string name="pedidos">Pedidos\n</string>
    <string name="opciones">Opciones</string>
    <string name="usuario">Usuario</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="navigation_drawer_open">Menu abierto</string>
    <string name="navigation_drawer_close">Menu cerrado</string>
    <string name="productos_destacados">productos destacados</string>
    <string name="agregar_carrito">Agregar</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nuevo_producto">Nuevo producto</string>
    <string name="editar_producto">Editar producto</string>
    <string name="confirmar_eliminar">¿Eliminar producto?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="sin_stock">Sin stock</string>
    <string name="empty_productos">No hay productos</string>
    <string name="empty_carrito">No hay productos en el carrito</string>
    <string name="empty_compras">No hay pedidos realizados</string>
    <string name="empty_admin">No hay pedidos</string>
    <string name="empty_usuarios">No hay usuarios registrados</string>
    <string name="proceder_pago">Proceder al pago</string>
</resources>